...
        actions: <Widget>[
          Padding(
            padding: const EdgeInsets.only(right: 12),
            child: Chip(
              label: Text(
                (_config.circle ?? 0).toString(),
                key: Key('circleText'),
                style: TextStyle(
                  color: Theme.of(context).accentColor,
                  fontWeight: FontWeight.bold,
                ),
              ),
              backgroundColor: Colors.white24,
...
                  'assets/images/pomodoro_512.png',
                  height: 100.0,
                ),
              ),
            ),
            ListTile(
              key: Key('resetTile'),
              leading: Icon(Icons.restore),
              title: Text('Reset'),
              onTap: _reset,
            ),
            Divider(),
            ListTile(
              key: Key('settingsTile'),
              leading: Icon(Icons.settings),
              title: Text('Settings'),
              onTap: () => Navigator.of(context).popAndPushNamed('/settings'),
            ),
            Divider(),
            ListTile(
...
              child: CircularProgressIndicator(),
            );
          }),
      floatingActionButton: FloatingActionButton(
        key: Key('faButton'),
        onPressed: _fabPress,
        tooltip: 'Pomodoro Control',
        child: _fabIcon,
      ),
    );
  }

  ///
...
  ///
  ///
  Chip _getChipByStatus(Status status) {
    switch (status) {
      case Status.stopped:
        return Chip(
          key: Key('stoppedChip'),
          label: Text(
            'Stopped',
            textScaleFactor: 1.5,
            style: TextStyle(color: Colors.white),
          ),
          backgroundColor: Colors.black26,
        );
      case Status.task:
        return Chip(
          key: Key('workingChip'),
          label: Text(
            'Working',
            textScaleFactor: 1.5,
            style: TextStyle(color: Colors.white),
          ),
          backgroundColor: Colors.green,
        );
      case Status.short:
        return Chip(
          key: Key('shortPauseChip'),
          label: Text(
            'Short Pause',
            textScaleFactor: 1.5,
            style: TextStyle(color: Colors.white),
          ),
          backgroundColor: Colors.amber,
        );
      case Status.long:
        return Chip(
          key: Key('longPauseChip'),
          label: Text(
            'Long Pause',
            textScaleFactor: 1.5,
            style: TextStyle(color: Colors.white),
          ),
          backgroundColor: Colors.orange,
...
                  Icons.check_circle,
                  key: Key('taskOk${i}Icon'),
                  color: Theme.of(context).accentColor,
                )
              : Icon(
                  Icons.brightness_1,
                  key: Key('taskEmpty${i}Icon'),
                  color: Colors.black26,
                ))
          .toList(),
    );
  }
}
...
