...
            ),
          ),
        ),
      ],
      hideHeader: true,
      title: Text(
        'Task Time',
        textAlign: TextAlign.center,
        style: TextStyle(
          color: Colors.black45,
        ),
      ),
      selectedTextStyle: TextStyle(color: Theme.of(context).accentColor),
...
